Bug 1925365 - Simplify nsINode::IsInDesignMode. r=masayuki

We know that the document has the flag because we've set it above, and a
document is always in the uncomposed doc.

No behavior change.

Differential Revision: https://phabricator.services.mozilla.com/D229346